# big-AGI

./: .gitignore  CLAUDE.md  INVESTIGATION_REPORT.md  OCR_Availability_24022026_От_Антона.txt  PROXY_CONTEXT_TEST_REPORT.md  PROXY_FIX_REPORT.md  _context_dump.py  _context_dump.txt  my-changes.patch  package-lock.json  test_context.py  test_context.sh  test_context_boundary.py  test_context_bypass.py  test_context_clean.py  test_context_final.py  test_context_fresh.py  test_context_upper.py  test_context_verify.py  tsconfig.json
context-management/: .gitignore  ALTERNATIVES_ANALYSIS.md  ALTERNATIVE_B_IMPLEMENTATION.md  BUGFIX_2_REPEAT_COMPRESSION.md  CANONICAL_PRODUCT_INTENT.md  COMPRESSION_INSTRUCTIONS.md  CRITICAL_BUG_3_CACHE.md  CRITICAL_BUG_4_FORMULA.md  CRITICAL_BUG_5_BUFFERS.md  CRITICAL_BUG_FIXED.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  ENHANCEMENT_LOG.md  FINAL_ENHANCEMENT_SUMMARY.md  FINAL_STATUS.md  FINAL_SUMMARY_ALL_5_BUGS.md  HANDOFF.md  HOW_TO_START_PROXY.md  PYTHONPATH_FIX.md  QUICKSTART.md  README.md  README_USER.md  RECOVERY_CHECKPOINT.md  REQUIREMENTS_ANALYSIS.md  RESTART_PROXY.sh  START_PROXY.sh  START_TESTING.md  STATUS.txt  VALIDATION_RESULTS_CORRECTED.md  pyproject.toml  run_proxy.sh  test_fix.sh
context-management/audit_reality_check/: API_USAGE_LOG.md  ARCHITECTURE_VERDICT.md  ASSUMPTIONS.md  BLOCKER_FIXES.md  CALL_GRAPH.md  CODE_MAP.md  CURRENT_TASK.md  DECISION_LOG.md  DOC_TRUST_INDEX.md  ENTRYPOINTS.md  EVIDENCE_INDEX.md  FINAL_REALITY_REPORT.md  MISSION.md  NEXT_STEP_RECOMMENDATION.md  PHASE_1_2_SUMMARY.md  PROJECT_TRUTH_BASELINE.md  (+4 more)
(+95 files in other folders)
